--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^18.0.0",
     "@angular/compiler": "^18.0.0",
     "@angular/core": "^18.0.0",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.0.0",
     "@angular/material": "^18.0.5",
     "@angular/platform-browser": "^18.0.0",
@@ -25,8 +26,11 @@
     "@angular/ssr": "^18.0.1",
     "@coreui/angular": "^5.2.3",
     "express": "^4.19.2",
+    "firebase": "^10.12.3",
+    "flowbite": "^2.4.1",
     "mongoose": "^8.4.4",
     "ngx-toastr": "^19.0.0",
+    "pagedone": "^1.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
