--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "express": "^4.19.2",
     "firebase": "^10.12.3",
     "flowbite": "^2.4.1",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.4.4",
     "ngx-toastr": "^19.0.0",
     "pagedone": "^1.1.2",
